examples/front-proxy-test/grafana_envoy_test/grafana-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 3000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          # "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          # route_config:
          #   name: local_route
          #   virtual_hosts:
          #   - name: service
          #     domains:
          #     - "*"
          #     routes:
          #     - match:
          #         prefix: "/service"
          #       route:
          #         cluster: local_service
          route_config:
            name: https_route_v4_default
            virtual_hosts:
            - name: default
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/grafana/"
                route:
                  cluster: grafana_service
              # - match:
              #     prefix: "/"
              #   route:
              #     cluster: lede          

          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: grafana_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grafana_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grafana
                port_value: 3000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

# layered_runtime:
#   layers:
#   - name: static_layer_0
#     static_layer:
#       envoy:
#         resource_limits:
#           listener:
#             example_listener_name:
#               connection_limit: 10000
